[pycodestyle]
max_line_length = 160

[flake8]
max-line-length = 160
per-file-ignores =
    */__init__.py: F401



[options]
packages =
    autogluon
    autogluon.timeseries
    autogluon.core
    autogluon.common
    autogluon.features
    autogluon.tabular
    autogluon.multimodal

package_dir =
    autogluon = autogluon
    autogluon.timeseries = timeseries
    autogluon.core = core
    autogluon.common = common
    autogluon.features = features
    autogluon.tabular = tabular
    autogluon.multimodal = multimodal
