[pycodestyle]
max_line_length = 160

[flake8]
max-line-length = 160
per-file-ignores =
    */__init__.py: F401

[tool.setuptools]
packages = ["autogluon", "autogluon.common", "autogluon.core", "autogluon.features", "autogluon.multimodal", "autogluon.tabular", "autogluon.timeseries"]

[options]
package_dir =
    autogluon = autogluon
    autogluon.common = common
    autogluon.core = core
    autogluon.features = features
    autogluon.multimodal = multimodal
    autogluon.tabular = tabular
    autogluon.timeseries = timeseries